--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Helo</title>
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <h1>Welcome to my website!</h1>
     Hello, world!
     <h1>This is heading 2</h1>
 </body>
